test/programs/good/typechecker/measr_8.lq
initBit :: Qbit -> Int -> Int -> Bit
initBit q i j = measr q 
