test/programs/bad/function_has_integer_arg__IncorrectNumberOfFunctionArguments.lq
fun :: Int -> Bit
fun int arg  = 1

main :: Bit
main = other
